# deeplearning-ece472

./: justfile
hw01/: README.md  pyproject.toml
hw01/src/hw01/: __init__.py  config.py  data.py  model.py  plotting.py  training.py
hw02/: README.md  pyproject.toml
hw02/src/hw02/: __init__.py  data.py  model.py  training.py
hw03/: README.md  pyproject.toml
hw03/artifacts/: hw03.logfile
hw03/src/hw03/: __init__.py  config.py  logging.py  model.py  training_testing.py
hw04/: README.md  pyproject.toml
hw04/saves/cifar-10/state/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
hw04/saves/cifar-10/state/array_metadatas/: process_0
hw04/saves/cifar-10/state/ocdbt.process_0/: manifest.ocdbt
hw04/saves/cifar-100/state/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
hw04/saves/cifar-100/state/array_metadatas/: process_0
hw04/saves/cifar-100/state/ocdbt.process_0/: manifest.ocdbt
hw04/src/hw04/: __init__.py  config.py  data.py  logging.py  model.py  training_testing.py
hw05/: README.md  pyproject.toml
hw05/saves/ag-news/state/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
hw05/saves/ag-news/state/array_metadatas/: process_0
hw05/saves/ag-news/state/ocdbt.process_0/: manifest.ocdbt
hw05/src/hw05/: __init__.py  config.py  data.py  embedding.py  model.py  training_testing.py
hw06/: README.md  pyproject.toml
hw06/src/hw06/: __init__.py  config.py  logging.py  model.py  testing.py
hw07/: README.md  pyproject.toml
hw07/src/hw07/: __init__.py  config.py  model.py  plotting.py  training.py
