# pyproject.toml.jinja

[project]
name = "hw01"
version = "0.1.0"
description = "Linear regression of a noisy sine wave using a set of Gaussian basis function with learned location and scale parameters."
readme = "README.md"
authors = [
    { name = "Donghyun Park", email = "donghyun.park@cooper.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "rich",
    "numpy",
    "jax",
    "flax",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
hw01 = "hw01:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
