# pyproject.toml.jinja

[project]
name = "hw03"
version = "0.1.0"
description = "Classify MNIST digits with a convolutional neural network with at least 95.5% accuracy."
readme = "README.md"
authors = [
    { name = "Donghyun Park", email = "donghyun.park@cooper.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "rich",
    "numpy",
    "jax",
    "flax",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "tensorflow-datasets>=4.9.9",
    "tensorflow>=2.20.0",
]

[project.scripts]
hw03 = "hw03:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
