# pyproject.toml.jinja

[project]
name = "hw05"
version = "0.1.0"
description = "Classify the AG News dataset."
readme = "README.md"
authors = [
    { name = "Donghyun Park", email = "donghyun.park@cooper.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "rich",
    "numpy",
    "jax",
    "flax",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "pydantic>=2.12.1",
    "pydantic-settings>=2.11.0",
    "orbax>=0.1.9",
    "sentence-transformers>=5.1.1",
    "tf-keras>=2.20.1",
    "matplotlib>=3.10.7",
]

[project.scripts]
hw05 = "hw05:main"
test = "hw05:run_test"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
